[tool]
[tool.poetry]
name = "fastapi-pyramidion"
version = "0.1-dev"
description = "helper for FastAPI to mount app to a ROOT_PATH"
authors = ["Kyle Smith <smithk86@gmail.com>"]
license = "MIT"
repository = "https://github.com/smithk86/fastapi-pyramidion"

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
mypy = "*"
pytest-mypy = "*"
anyio = "*"
asgi-lifespan = "*"
httpx = "*"
black = "*"

[tool.poetry.scripts]
pytest = "pytest:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--mypy"
